--- a/style.css
+++ b/style.css
@@ -111,19 +111,24 @@ body::before {
   width: 100%;
   min-height: 100vh;
   position: relative;
+  z-index: 1;
 }
 
 .section {
-  width: 100%;
-  min-height: 100vh;
+  width: 100%;\n  min-height: 100vh;
   padding: var(--section-padding);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   position: relative;
-  z-index: 1;
+  z-index: 2;
   box-sizing: border-box;
+}
+
+.section > * {
+  position: relative;
+  z-index: 3;
 }
 
 .section.projects {
